# beauty-pizza-chatbot

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
src/: main.py
src/agent/: __init__.py  beauty_pizza_agent.py  tools.py
src/beauty_pizza_chatbot/: __init__.py  main.py
src/beauty_pizza_chatbot/agent/: beauty_pizza_agent.py  tools.py
src/beauty_pizza_chatbot/integrations/: __init__.py  knowledge_base.py  order_api.py
src/beauty_pizza_chatbot/utils/: __init__.py  setup.py
src/integrations/: knowledge_base.py  order_api.py
src/utils/: __init__.py
